--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "gpspiel",
-  "version": "0.1.0",
-  "private": true,
+  "name": "gpneu",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "homepage": "./",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danielbarben/GP-Bern.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/danielbarben/GP-Bern/issues"
+  },
   "dependencies": {
-    "@ta-interaktiv/react-masthead": "^5.5.0",
-    "@ta-interaktiv/react-paywall": "^1.1.4",
+    "@ta-interaktiv/api-access": "^1.0.2",
+    "@ta-interaktiv/react-masthead": "^6.0.4",
+    "@ta-interaktiv/react-share-buttons": "^4.1.2",
+    "@ta-interaktiv/react-theme-switch": "^2.0.2",
     "@ta-interaktiv/semantic-ui": "^3.2.0",
+    "@ta-interaktiv/types": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dom-confetti": "^0.1.3",
     "react-ga": "^2.7.0",
     "react-scripts": "3.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -33,16 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/danielbarben/bernerWasser.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/danielbarben/bernerWasser/issues"
-  },
-  "description": ""
+  }
 }
